force-app/main/default/objects/GICAnnotation__c/GICAnnotation__c.object-meta.xml
<CustomObject>
    <label>GICAnnotation</label>
    <nameField>
        <label>GICAnnotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GICAnnotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>