force-app/main/default/objects/GICAnnotation__c/fields/GICModel__c.field-meta.xml
<CustomField>
    <fullName>GICModel__c</fullName>
    <label>GICModel</label>
    <referenceTo>GICModel__c</referenceTo>
    <relationshipLabel>GICAnnotations</relationshipLabel>
    <relationshipName>GICAnnotations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>