force-app/main/default/objects/GICAnnotation__c/fields/GICZone__c.field-meta.xml
<CustomField>
    <fullName>GICZone__c</fullName>
    <label>GICZone</label>
    <referenceTo>GICZone__c</referenceTo>
    <relationshipLabel>GICAnnotations</relationshipLabel>
    <relationshipName>GICAnnotations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>