force-app/main/default/objects/GICAnnotation__c/fields/x__c.field-meta.xml
<CustomField>
    <fullName>x__c</fullName>
    <label>x</label>
    <length>10</length>
    <type>Text</type>
</CustomField>