force-app/main/default/objects/GICAnnotation__c/fields/y__c.field-meta.xml
<CustomField>
    <fullName>y__c</fullName>
    <label>y</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>