force-app/main/default/objects/GICAnnotation__c/fields/z__c.field-meta.xml
<CustomField>
    <fullName>z__c</fullName>
    <label>z</label>
    <length>10</length>
    <type>Text</type>
</CustomField>